apps/media/overseerr/exporter.yaml
#
# Reference:
# https://github.com/WillFantom/overseerr-exporter
#

apiVersion: v1
kind: Service
metadata:
  name: overseerr-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: overseerr-exporter
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: overseerr-exporter
  type: ClusterIP
  ports:
    - name: metrics
      port: 9850
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: overseerr-exporter
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: overseerr-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: overseerr-exporter
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: overseerr-exporter
          image: ghcr.io/willfantom/overseerr-exporter:latest
          imagePullPolicy: Always
          args:
            - --overseerr.address=http://overseerr.media.svc.cluster.local:5055
            - --overseerr.api-key=$(API_KEY)
          ports:
            - name: metrics
              containerPort: 9850
              protocol: TCP
